--- a/draw.html
+++ b/draw.html
@@ -1,33 +1,25 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-  <head>
-    <title>Draw! :)</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="http://intridea.github.io/sketch.js/lib/sketch.min.js"></script>
-    <script src="/socket.io/socket.io.js"></script>
-    <script>var socket = io();</script>
-    <script src="client.js"></script>
-  </head>
-  <body>
-    <div id="tools">
-      <a href="#colors_sketch" data-download="png" style="float: right; width: 100px;">Download</a>
-    </div>
-    <canvas id="colors_sketch" width="1200" height="800"></canvas>
-    <script type="text/javascript">
-    $(function () {
-      $.each(['#f00', '#ff0', '#0f0', '#0ff', '#00f', '#f0f', '#000', '#fff'], function () {
-        $('#tools').append("<a href='#colors_sketch' data-color='" + this +
-        "' style='width: 10px; height: 10px; display: block; background: " + this +
-        ";'></a> ");
-      });
-      $('#colors_sketch').sketch();
-    });
-    $('#colors_sketch').mousedown(function(){
-      socket.emit('drawing');
-    });
-    $('#colors_sketch').mouseup(function(){
-      socket.emit('stopped-drawing'); // Little bit glitchy but it let's us know when the user has stopped drawing
-    });
-    </script>
-  </body>
+   <head>
+      <title>Collaborative Whiteboard</title>
+      <meta charset="utf-8">
+      <style type="text/css">
+* {
+   margin: 0;
+   padding: 0;
+}
+body, html{
+   width: 100%;
+   height: 100%;
+}
+#canvas {
+   display: block;
+}
+</style>
+      <script src="socket.io/socket.io.js"></script>
+      <script src="client.js"></script>
+   </head>
+   <body>
+      <canvas id="drawing"></canvas>
+   </body>
 </html>
