--- a/Combined/whiteboard.html
+++ b/Combined/whiteboard.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" type="text/css" href="/style.css">
 		<script src="socket.io/socket.io.js"></script>
 		<script src="http://code.jquery.com/jquery-1.11.1.js"></script>
-		<script src="clientCom.js"></script>
+		<script src="client.js"></script>
 	</head>
 	<body onload="getName();">
 		<div id="divTools">
