Implemented eraser but need work

--- a/Combined/whiteboard.html
+++ b/Combined/whiteboard.html
@@ -10,7 +10,7 @@
 	</head>
 	<body onload="getName();">
 		<div id="divTools">
-			tools
+			<button type="button" onclick="erase();">BUUUUUUUUUUTON</button>
 		</div>
 		<ul id="messages"; border: 1px solid black;>
 		</ul>
