Small changes with html/css

--- a/Combined/whiteboard.html
+++ b/Combined/whiteboard.html
@@ -10,7 +10,7 @@
 	</head>
 	<body onload="getName();">
 		<div id="divTools">
-			<button type="button" onclick="erase();">BUUUUUUUUUUTON</button>
+			<button id="erasebutton" type="button" onclick="erase();">ERASER</button>
 		</div>
 		<ul id="messages"; border: 1px solid black;>
 		</ul>
