Added the save button itself

--- a/Combined/whiteboard.html
+++ b/Combined/whiteboard.html
@@ -11,6 +11,7 @@
 	<body onload="getName();">
 		<div id="divTools">
 			<button id="erasebutton" type="button" onclick="erase();">ERASER</button>
+			<a href="" id="save" download="whiteboard_image.jpg"> <button onclick="downloadImage()" >Save</button> </a>
 		</div>
 		<ul id="messages"; border: 1px solid black;>
 		</ul>
