Line width implemented

--- a/Combined/whiteboard.html
+++ b/Combined/whiteboard.html
@@ -12,6 +12,10 @@
 		<div id="divTools">
 			<button id="erasebutton" type="button" onclick="erase();">ERASER</button>
 			<a href="" id="save" download="whiteboard_image.jpg"> <button onclick="downloadImage()" >Save</button> </a>
+			<form id="widthSize" onsubmit="setWidth()">
+				<label for="width">Line Width</label>
+				<input type="number" id="width" name="width">
+			</form>
 		</div>
 		<ul id="messages"; border: 1px solid black;>
 		</ul>
