--- a/Combined/whiteboard.html
+++ b/Combined/whiteboard.html
@@ -16,6 +16,10 @@
 				<label for="width">Line Width</label>
 				<input type="number" id="width" name="width">
 			</form>
+			<form id="colourOption" onsubmit="setColour()">
+				<label for="colour">Colour</label>
+				<input type="text" id="colour" name="colour">
+			</form>
 		</div>
 		<ul id="messages"; border: 1px solid black;>
 		</ul>
