--- a/Combined/whiteboard.html
+++ b/Combined/whiteboard.html
@@ -21,8 +21,7 @@
 				<input type="text" id="colour" name="colour">
 			</form>
 		</div>
-		<ul id="messages"; border: 1px solid black;>
-		</ul>
+			<ul id="messages"; border: 1px solid black;></ul>
 		<form action="">
 			<input id="m" autocomplete="off" />
 		</form>
