Seperated chat form css from affecting all forms, this is what caused weird placing of forms on toolbar

--- a/Combined/whiteboard.html
+++ b/Combined/whiteboard.html
@@ -22,7 +22,7 @@
 			</form>
 		</div>
 			<ul id="messages"; border: 1px solid black;></ul>
-		<form action="">
+		<form id="send" action="">
 			<input id="m" autocomplete="off" />
 		</form>
 		<canvas id="drawing"></canvas>
