--- a/Combined/whiteboard.html
+++ b/Combined/whiteboard.html
@@ -9,18 +9,19 @@
 		<script src="client.js"></script>
 	</head>
 	<body onload="getName();">
-		<div id="divTools">
-			<button id="erasebutton" type="button" onclick="erase();">ERASER</button>
-			<a href="" id="save" download="whiteboard_image.jpg"> <button onclick="downloadImage()" >Save</button> </a>
-			<form id="widthSize" onsubmit="setWidth()">
+		<ul id="ulTools">
+			<li class="liLeft"><button type="button" onclick="erase();">ERASER</button></li>
+			<li class="liRight"><a href="" download="whiteboard_image.jpg"> 
+			<button id="save" onclick="downloadImage()" >Save</button> </a></li>
+			<li class="liLeft"><form id="widthSize" onsubmit="setWidth()">
 				<label for="width">Line Width</label>
 				<input type="number" id="width" name="width">
-			</form>
-			<form id="colourOption" onsubmit="setColour()">
+			</form></li>
+			<li class="liLeft"><form id="colourOption" onsubmit="setColour()">
 				<label for="colour">Colour</label>
 				<input type="text" id="colour" name="colour">
-			</form>
-		</div>
+			</form></li>
+		</ul>
 			<ul id="messages"; border: 1px solid black;></ul>
 		<form id="send" action="">
 			<input id="m" autocomplete="off" />
