--- a/Combined/whiteboard.html
+++ b/Combined/whiteboard.html
@@ -10,7 +10,7 @@
 	</head>
 	<body onload="getName();">
 		<ul id="ulTools">
-			<li class="liLeft"><button type="button" onclick="erase();">ERASER</button></li>
+			<li class="liLeft"><button id="erase" type="button" onclick="erase();">ERASER</button></li>
 			<li class="liRight"><a href="" download="whiteboard_image.jpg"> 
 			<button id="save" onclick="downloadImage()" >Save</button> </a></li>
 			<li class="liLeft"><form id="widthSize" onsubmit="setWidth()">
