Fixed the save button after I broke it whoooooooops

--- a/Combined/whiteboard.html
+++ b/Combined/whiteboard.html
@@ -11,7 +11,7 @@
 	<body onload="getName();">
 		<ul id="ulTools">
 			<li class="liLeft"><button id="erase" type="button" onclick="erase();">ERASER</button></li>
-			<li class="liRight"><a href="" download="whiteboard_image.jpg"> 
+			<li class="liRight"><a id="download" href="" download="whiteboard_image.jpg"> 
 			<button id="save" onclick="downloadImage()" >Save</button> </a></li>
 			<li class="liLeft"><form id="widthSize" onsubmit="setWidth()">
 				<label for="width">Line Width</label>
