--- a/Combined/whiteboard.html
+++ b/Combined/whiteboard.html
@@ -13,10 +13,12 @@
 			<li class="liLeft"><button id="erase" type="button" onclick="erase();">ERASER</button></li>
 			<li class="liRight"><a id="download" href="" download="whiteboard_image.jpg"> 
 			<button id="save" onclick="downloadImage()" >Save</button> </a></li>
-			<li class="liLeft"><form id="widthSize" onsubmit="setWidth()">
-				<label for="width">Line Width</label>
-				<input type="number" id="width" name="width">
-			</form></li>
+			<li class="liLeft">
+				<form id="widthSize" onsubmit="setWidth()">
+					<label for="width">Line Width</label>
+					<input type="number" id="width" name="width">
+				</form>
+			</li>
 			<li class="liLeft">
 				<form>
   				<input id="colour" type="color" name="favcolor" value="#ff0000" onchange="setColour();">
